# monitor-app

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  README_ja.md  app.py  pyproject.toml
.github/workflows/: build.yml  ci.yml  code-quality-check.yml  commit-message-check.yml  test.yml
csv_data/: orders.csv
docker/: Dockerfile  README.md
docs/: feature_expansion_v2.1.md  improvement_review_2026-06.md  integrations_v2_2.md  qiita_usage_guide.md  redesign_v2.md  ui_redesign_v2_3.md
monitor_app/: .env  __init__.py  app.py  cli.py  csv_to_db.py  exceptions.py  logging_conf.py  main.py  rules.json  schema.json
monitor_app/api/: __init__.py  deps.py  errors.py  schemas.py
monitor_app/api/routers/: __init__.py  alerts.py  audit.py  auth.py  crud.py  ingest.py  meta.py  pages.py  views.py
monitor_app/config/: config.py
monitor_app/csv_data/: orders.csv  products.csv
monitor_app/db/: __init__.py  engine.py  ingest_state.py  registry.py  repository.py
monitor_app/instances/: database.db
monitor_app/integrations/: __init__.py  netdiag.py  network_checker.py  procdiag.py
monitor_app/scaffold/: README.md  config.py  env.example
monitor_app/services/: __init__.py  alert_scheduler.py  alert_service.py  audit_service.py  coercion.py  connectors.py  crud_service.py  importer.py  ingest_watcher.py  kpi_service.py  view_cache.py  view_service.py
monitor_app/services/notifiers/: __init__.py  base.py  email.py  line.py  webhook.py
monitor_app/settings/: __init__.py  declarative.py  loader.py  runtime.py
monitor_app/templates/: base.html  index.html  table.html
monitor_app/web/static/css/: app.css  dashboard.css  kiosk.css
monitor_app/web/static/js/: alerts-ui.js  app.js  chart-view.js  dashboard.js  form.js  kiosk.js  kpis.js  table-render.js  theme.js
monitor_app/web/templates/: base.html  form.html  index.html  kiosk.html  login.html  table.html
mypjt/: app.py
tasks/: 00-overview.md  T01-foundation.md  T02-connectors.md  T03-watcher-cli.md  T04-procdiag-preset.md  T05-netdiag-preset.md  T06-netcheck-preset.md  T07-docs-scaffold.md  U00-overview.md  U01-foundation.md  U02-base-theme.md  U03-dashboard.md  U04-viewpage.md  U05-docs.md
templates/: index.html
tests/: conftest.py  test_api.py  test_app.py  test_auth_session.py  test_config.py  test_connectors.py  test_features.py  test_ingest_robustness.py  test_ingest_sources.py  test_integration_netcheck.py  test_integration_netdiag.py  test_integration_procdiag.py  test_pages.py  test_scaffold_config.py  test_settings.py  test_sources_config.py  test_ui_base.py  test_ui_config.py  test_ui_dashboard.py  test_ui_kiosk.py  test_ui_viewpage.py  test_view_perf.py
