[tool.poetry]
name = "monitor-app"
version = "0.1.0"
description = "A simple Flask-based database viewer"
authors = ["hardwork9047 <tomatosimple1104@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/hardwork9047/monitor-app"
repository = "https://github.com/hardwork9047/monitor-app"
documentation = "https://github.com/hardwork9047/monitor-app"
packages = [{ include = "monitor_app" }]

# ✅ `include` を `[tool.poetry]` に追加（配列形式）
include = [
    "monitor_app/schema.json",
    "monitor_app/rule.json",
    "monitor_app/templates/*"
]

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
pandas = "^2.2.3"
python-dotenv = "^1.0.0"
flask-cors = "^4.0.0"
click = "^8.1.3"
setuptools = "^75.8.0"

[tool.poetry.scripts]
monitor-app = "monitor_app.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
